[package]
name = "masm"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
once_cell = "1"
libloading = { version = "0.8", default-features = false }

[dev-dependencies]
tempfile = "3"

[features]
# Enables additional debug printing in the interpreter via the debug_println! macro.
debug_print = []
