[package]
name = "masm"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
once_cell = "1"
libloading = { version = "0.8", default-features = false }
crossterm = { version = "0.26", default-features = false }
raylib = { version = "5.5.1", optional = true }
ratatui = { version = "0.20", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Enables additional debug printing in the interpreter via the debug_println! macro.
debug_print = []

# Enables the built-in Raylib-backed MNI module (requires system raylib dev libs)
raylib_mni = ["raylib"]

# Optional terminal UI debugger using ratatui + crossterm
ratatui_debug = ["ratatui"]
